[project]
name = "koi-net-ask-view-node"
version = "0.1.0"
description = "SET NODE DESCRIPTION"
authors = [
    {name = "Luke Miller", email = "luke@metagov.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "koi-net~=1.3.1",
    "slack-bolt>=1.27.0",
]

[project.urls]
# Homepage = "SET TO NODE REPO URL"