[project]
name = "koi-net-ask-view-node"
version = "0.1.0"
description = "View KOI-net node for ask network application."
authors = [
    {name = "Luke Miller", email = "luke@metagov.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "koi-net~=2.0",
    "slack-bolt>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/metagov/koi-net-ask-view-node"